tests/paczka1/small_fuzzy/29117111.err
Error in line 1: bB1Q A514 16,7
Error in line 6: bB1Q S165 9,3
Error in line 8: RBbq8aaE A514 59,8
Error in line 12: RBbq8aaE A369 37,5
